# Dydown

./: .gitattributes  .gitmessage.txt  DouYinCommand.py  DyDown.spec  README.md  build.py  config.example.yml  config.toml  config.yml  data.db  ffmpeg.tar.xz  main.spec  manifest.xml  pack.py  path_output.txt  pyproject.toml  requirements.txt  test_installer.bat
.github/workflows/: build.yml  performance.yml
apiproxy/: __init__.py
apiproxy/common/: __init__.py  config.py  utils.py
apiproxy/douyin/: __init__.py  api_handler.py  database.py  douyin.py  douyinapi.py  download.py  download_manager.py  result.py  urls.py
docs/: examples.md
dydown/: app.manifest  auth.py  download_manager.py  downloader.py  icon.py  login_manager.py  main.py  parser.py  updater.py
dydown/api/douyin/: __init__.py  client.py
dydown/auth/: manager.py
dydown/downloader/: __init__.py  core.py  manager.py
dydown/scraper/douyin/: parser.py
dydown/ui/: context_menu.py  download_manager_widget.py  history_widget.py  login_dialog.py  main_window.py  settings_widget.py  tray_icon.py  video_card.py
hooks/: hook-pywin32.py
installer/: installer.iss  installer.nsi
scripts/: clean_temp_files.py  generate_perf_report.py  performance_test.py  run_perf_test.bat
utils/: logger.py
