[tool.poetry]
name = "dydown"
version = "0.1.0"
description = "DouYin Downloader"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PySide6 = "^6.5.0"
requests = "^2.31.0"
pyinstaller = "^6.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"